[package]
name = "virtio-drivers-sel4"
version = "0.7.5"
license = "MIT"
authors = [
  "dirk.bangel@gmx.de",
]
edition = "2021"
description = "VirtIO guest drivers used in context of SeL4"
repository = "https://github.com/BDUG/virtio-drivers-sel4"
keywords = ["virtio"]
categories = ["hardware-support", "no-std"]

[dependencies]
log = "0.4.22"
bitflags = "2.6.0"
enumn = "0.1.14"
zerocopy = { version = "0.7.35", features = ["derive"] }

[features]
default = ["alloc"]
alloc = ["zerocopy/alloc"]

[dev-dependencies]
zerocopy = { version = "0.7.35", features = ["alloc"] }
